Revision history for Mojo-IOLoop-ReadWriteFork

0.10
       * Remove hackish /proc/$pid test
       * Fix die() inside callback in child process
       * Add "ioloop" attribute
       * Deprecated "reactor" attribute

0.09     Wed Nov 19 15:35:36 2014
       * Trying to fix t/telnet.t with \r\n on BSD

0.08     Sun Nov 16 14:16:47 2014
       * Trying to fix t/telnet.t with localhost

0.07     Thu Nov 13 18:52:55 2014
       * Trying to fix t/telnet.t with 127.0.0.1
       * Mojo::EventEmitter::emit_safe is DEPRECATED

0.06     Mon Aug 11 16:59:18 2014
       * Fix "Use of uninitialized value in numeric eq (==) at ReadWriteFork.pm line 182."
       * Add support for write() before child process has started
       * Add support for "drain" callback to write()
       * Add run(). a simpler version start()
       * Add close() for closing STDIN

0.05     Wed Feb 19 13:29:54 2014
       * Fix "read" event cannot change ERRNO from sysread()

0.04     Fri Nov 22 19:52:52 2013
       * Add support for callbacks
       * Fix failing tests

0.03     Fri Nov 22 08:35:43 2013
       * A bit more relaxed test for cat.t: Running it on BSD results in
         "^D&#8;&#8;" at the end.

0.02     Wed Nov 20 11:36:38 2013
       * Add example/tail.pl
       * Fix failing t/bash.t

0.01     Wed Nov 20 10:25:19 2013
       * First release on CPAN